<resources>
    <string name="app_name">Mood Timeline</string>
    <string name="timeline">Timeline</string>
    <string name="add_note">Add note</string>
    <string name="edit_note">Edit note</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="note">Note</string>
    <string name="mood">Mood</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="from_with_semicolon">from:</string>
    <string name="to_with_semicolon">to:</string>
    <string name="calendar">Calendar</string>
    <string name="monday_short_uppercase">MON</string>
    <string name="tuesday_short_uppercase">TUE</string>
    <string name="wednesday_short_uppercase">WED</string>
    <string name="thursday_short_uppercase">THU</string>
    <string name="friday_short_uppercase">FRI</string>
    <string name="saturday_short_uppercase">SAT</string>
    <string name="sunday_short_uppercase">SUN</string>
    <string name="moods_not_found">Moods\nnot found</string>
    <string name="add_first_mood">Add first mood</string>
    <string name="come_back_tomorrow_to_add_next_mood">Come back tomorrow\nto add next mood</string>
    <string name="next_underlined"><u>Next</u></string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="whats_on_your_mind">What’s on your mind</string>
    <string name="choose_photo">Choose photo</string>
    <string name="gallery">Gallery</string>
    <string name="set_pin_to_access_app">Set PIN to access app</string>
    <string name="export_moods_to_pdf">Export moods to PDF</string>
    <string name="theme">Theme</string>
    <string name="export_period">Export period</string>
    <string name="export_all_moods">Export all moods</string>
    <string name="close_underlined"><u>Close</u></string>
    <string name="pdf_generated">PDF generated!</string>
    <string name="pdf_generated_to">PDF generated to directory:</string>
    <string name="light">LIGHT</string>
    <string name="dark">DARK</string>
    <string name="ok">OK</string>
    <string name="back_underlined"><u>Back</u></string>
    <string name="do_you_want_to_change_theme">Do you want to change theme?</string>
    <string name="app_will_be_restarted_after_theme_change">App will be restarted after theme change</string>
    <string name="or">or</string>
    <string name="share_pdf">Share PDF</string>
    <string name="notifications">Notifications</string>
    <string name="set_notification_nreminder">Set notification\nreminder</string>
    <string name="turn_off">Turn OFF</string>
    <string name="turn_on">Turn ON</string>
    <string name="notifications_turned_on">Notifications\nturned on</string>
    <string name="reminder_set_to">Reminder set to:</string>
    <string name="app_notification">MoodTimeline Notifications</string>
    <string name="add_note_notification_title">Reminder!\nRemember to save your mood today!</string>
    <string name="reminder">Reminder</string>
    <string name="period">Period</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="moods">Moods</string>
</resources>
