<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/timelineTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/arrowLeftImageView"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_arrow_left" />

        <com.jemiola.moodtimeline.customviews.ComfortaBoldTextView
            android:id="@+id/monthTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/text_size_xlarge" />

        <ImageView
            android:id="@+id/arrowRightImageView"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="6dp"
            android:src="@drawable/ic_arrow_right" />

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/calendarTopBarGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:columnCount="7">

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/monday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/tuesday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/wednesday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/thursday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/friday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/saturday_short_uppercase"
            app:layout_columnWeight="1" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:gravity="center"
            android:text="@string/sunday_short_uppercase"
            app:layout_columnWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/calendarDaysGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="7"/>

</LinearLayout>