<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical"
    android:padding="18dp">

    <com.jemiola.moodtimeline.customviews.ComfortaBoldTextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/stats"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/titleDividerView"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/top_divider"
        android:elevation="2dp"
        android:translationY="2dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleDividerView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/pieChartPeriodLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/period"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_small" />

                <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from_with_semicolon"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_small" />

                <com.jemiola.moodtimeline.customviews.RalewayEditText
                    android:id="@+id/fromEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_search" />

                <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_with_semicolon"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_small" />

                <com.jemiola.moodtimeline.customviews.RalewayEditText
                    android:id="@+id/toEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:gravity="center"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/text_size_search" />

            </LinearLayout>

            <com.jemiola.moodtimeline.customviews.MultipartRadioButton
                android:id="@+id/rangeMultipartButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="3dp"
                android:paddingTop="12dp"
                android:paddingEnd="3dp"
                android:paddingBottom="6dp"
                app:layout_constraintTop_toBottomOf="@id/pieChartPeriodLayout"
                app:value1="All"
                app:value2="@string/year"
                app:value3="@string/month"
                app:value4="@string/week" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chartView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/rangeMultipartButton" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/chartView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
