<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/changeThemeDialogContentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.95"
        android:background="@color/colorBottomMenuBackground"
        android:clickable="true"
        android:focusable="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="8dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="22dp">

        <com.jemiola.moodtimeline.customviews.ComfortaBoldTextView
            android:id="@+id/changeThemeTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            android:text="@string/do_you_want_to_change_theme"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.jemiola.moodtimeline.customviews.ComfortaBoldTextView
            android:id="@+id/changeThemeDialogContentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            android:text="@string/app_will_be_restarted_after_theme_change"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_small"
            android:maxLines="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeThemeTitleTextView" />

        <View
            android:id="@+id/changeThemeButtonView"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="22dp"
            android:background="@drawable/button_background_ripple"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@id/changeThemeDialogContentTextView" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="@id/changeThemeButtonView"
            app:layout_constraintEnd_toEndOf="@id/changeThemeButtonView"
            app:layout_constraintStart_toStartOf="@id/changeThemeButtonView"
            app:layout_constraintTop_toTopOf="@id/changeThemeButtonView" />

        <com.jemiola.moodtimeline.customviews.RalewayRegularTextView
            android:id="@+id/backTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/back_underlined"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeThemeButtonView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>